--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <h1>Welcome to Angular Full Course</h1>
+<app-leftbar [fromParent] = 'parentMessage'></app-leftbar>
+<app-post-timeline></app-post-timeline>
+<app-rightbar></app-rightbar>
+<h2>{{message}}sdfsd</h2>
