--- a/src/app/post-timeline/post-timeline.component.html
+++ b/src/app/post-timeline/post-timeline.component.html
@@ -1,2 +1,3 @@
-<p>post-timeline works!</p>
-<app-post-list [fromPosttimeline]="timelinePost"></app-post-list>
+<h2>{{fromAppParentCom}}</h2>
+<app-post-list [fromPtTlCom]="messageTlComp"></app-post-list>
+<button (click)="sendMessage()" >Click</button>
