--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,5 @@
 <input type="text" [(ngModel)]="textValue" (keyup.enter)="onKeyup()">
 {{textValue}} -->
 <!-- <app-task-one></app-task-one> -->
-<app-angular-directive></app-angular-directive>
+<!-- <app-angular-directive></app-angular-directive> -->
+<app-task-two></app-task-two>
