--- a/src/app/angular-pipe/angular-pipe.component.html
+++ b/src/app/angular-pipe/angular-pipe.component.html
@@ -1,1 +1,14 @@
-<p>angular-pipe works!</p>
+<!-- <h1>{{title | lowercase}}</h1>
+<h1>{{count | number}}</h1>
+<h1>{{dcvalue | number:"2.0-0"}}</h1>
+<h1>{{price | currency:"CAD"}}</h1>
+<h1>{{price | currency:"INR":false:"2.1-1"}}</h1>
+<h1>{{today | date: "short"}}</h1>
+<h1>{{today | date: "shortDate"}}</h1>  -->
+<!-- Date Pipe Argument Search for Format -->
+<h1>{{postobj | json}}</h1>
+<h1>{{5 | percent:"1.1-1"}}</h1>
+<h1>{{postArray | slice:2:4}}</h1>
+<h1>{{userDetails.name | append}}</h1>
+<h1>{{userDetails.city | appendCLI}}</h1>
+<p>{{dummytext }}</p>
