--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,5 @@
 {{textValue}} -->
 <!-- <app-task-one></app-task-one> -->
 <!-- <app-angular-directive></app-angular-directive> -->
-<app-task-two></app-task-two>
+<!-- <app-task-two></app-task-two> -->
+<app-angular-pipe></app-angular-pipe>
