--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<!-- <h1>Welcome to Angular Full Course</h1>
-<app-post-timeline [fromAppParentCom]="parentMessage" (messageEvent)="receiveMessage($event)"></app-post-timeline>
+ <h1>Welcome to Angular Full Course</h1>
+<app-post-timeline [fromAppParentCom]="parentMessage" (messageEvent)="receiveMessage($event)"></app-post-timeline> -->
 <h2>{{childMessageView}}</h2>
 <h3>{{fromChildOutput}}</h3>
-<app-rightbar></app-rightbar> -->
+<app-rightbar></app-rightbar>
 
 <!-- String Interpolation -->
 <!-- <img src="{{imgURL}}" alt=""> -->
