Angular-Template-Driven-Form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,5 +32,6 @@
 <!-- <app-angular-directive></app-angular-directive> -->
 <!-- <app-task-two></app-task-two> -->
 <!-- <app-angular-pipe></app-angular-pipe> -->
-<app-angular-services></app-angular-services>
-<app-rightbar></app-rightbar>
+<!-- <app-angular-services></app-angular-services>
+<app-rightbar></app-rightbar> -->
+<app-angular-template-driven-form></app-angular-template-driven-form>
